# OpenGL-GLFW-GLAD-VSCODE-SETUP

./: CMakeLists.txt  LICENSE  README.md
include/glad/: glad.h
src/: glad.c  main.cpp
vsc/: tasks.json
